# paddles_detetction

./: CMakeLists.txt  fin_model.cpp  find_fin.cpp  new_planes.cpp  pico.cpp  planes.cpp  sequence.cpp  sequenceB5.cpp  test_cylinder.cpp
classes/: basketModel.cpp  findTarget.cpp  newBasketModel.cpp
include/: basketModel.h  findTarget.h  newBasketModel.h
